[package]
name = "post-it"
version = "3.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A minimalist list-based note taking tool to act as your terminal's post-it notes"
readme = "README.md"
repository = "https://github.com/astherath/post"
keywords = ["cli", "command-line", "notes"]
categories = ["command-line-utilities", "notes"]

[[bin]]
name = "post"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.12", features = ["derive"]}
config = "0.11.0"
shellexpand = "2.1"
clipboard = "0.5.0"
chrono = "0.4"
